# skipulagsstofnun

./: .gitignore  Dockerfile  LICENSE  README.md  create_shapefile.py  pyproject.toml  requirements.txt  tests.py
skipulagsstofnun/: __init__.py  plans.dbf  plans.shp  plans.shx
