[tool.poetry]
name = "skipulagsstofnun"
version = "0.1.0"
description = "Library to lookup polygons, coordinates and metadata of approved local site plans in Iceland"
authors = ["Jökull Sólberg <jokull@solberg.is>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jokull/skipulagsstofnun"
packages = [
	{ include = "skipulagsstofnun" },
]
include = [
	"skipulagsstofnun/plans.cpg",
	"skipulagsstofnun/plans.dbf",
	"skipulagsstofnun/plans.shp",
	"skipulagsstofnun/plans.shx",
]

[tool.poetry.dependencies]
python = "^3.6"
shapely = "^1.7.1"
fiona = "^1.8.17"

[tool.poetry.dev-dependencies]
requests = "^2.24.0"
black = "^20.8b1"
datasette = "^0.48"
typer = "^0.3.2"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
