[tool.poetry]
name = "skipulagsstofnun"
version = "0.1.5"
description = "Library to lookup polygons, coordinates and metadata of approved local site plans in Iceland"
authors = ["Jökull Sólberg <jokull@solberg.is>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jokull/skipulagsstofnun"
packages = [
	{ include = "skipulagsstofnun" },
]
include = [
	"skipulagsstofnun/plans.cpg",
	"skipulagsstofnun/plans.dbf",
	"skipulagsstofnun/plans.shp",
	"skipulagsstofnun/plans.shx",
]

[tool.poetry.dependencies]
python = "^3.9"
shapely = "^1.8.2"
fiona = "^1.8.21"

[tool.poetry.dev-dependencies]
requests = "^2.28.0"
black = "^22.3.0"
typer = "^0.4.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
